# Sindre

./: Main.hs  README  Setup.hs  shell.nix  sindre.1  sindre.cabal  sinmenu  sinmenu.1  visp.cabal
Graphics/X11/: Xft.hsc
Sindre/: .#Runtime.hs  ANSI.hs  Compiler.hs  Formatting.hs  KeyVal.hs  Lib.hs  Main.hs  Parser.hs  Runtime.hs  Sindre.hs  Util.hs  Widgets.hs  X11.hs
Visp/: Compiler.hs  Parser.hs  Runtime.hs  Util.hs  Visp.hs  Widgets.hs  X11.hs
examples/: askpass  dial  dial.sindre  dial.visp  dials.sindre  dials.visp  dmenu  dmenu.sindre  dock  fan  filesel  suggest  vdmenu
examples/sinmenu_patches/: README  sinmenu_incremental  sinmenu_multiselect
tests/: Properties.hs
