name:               sindre
version:            1.0-dev
homepage:           http://sigkill.dk/programs/sindre
synopsis:           A programming language for simple GUIs
description:
    Sindre is a language inspired by Awk, meant for creating very simple
    graphical user interfaces.
category:           GUI
license:            BSD3
license-file:       LICENSE
author:             Troels Henriksen
maintainer:         athas@sigkill.dk
cabal-version:      >= 1.6
build-type:         Simple

flag use_xft
  description: Use Xft to render text

executable sindre
    build-depends: X11>=1.5.0.0 && < 1.6, X11-xshape>=0.1.1, mtl, base==4.*, containers, utf8-string, parsec>=3.1, monads-fd, array>=0.3

    if flag(use_xft)
        build-depends: X11-xft >= 0.2
        extensions: ForeignFunctionInterface
        cpp-options: -DXFT
    main-is:            Main.hs
    other-modules:      Sindre.X11
                        Sindre.Util
                        Sindre.Parser
                        Sindre.Widgets
                        Sindre.Runtime
                        Sindre.Compiler
                        Sindre.Sindre

    ghc-options:        -funbox-strict-fields -Wall

    ghc-prof-options:   -prof -auto-all
    extensions:         CPP
