name:               sindre
version:            1.0-dev
homepage:           http://sigkill.dk/programs/sindre
synopsis:           A programming language for simple GUIs
description:
    Sindre is a language inspired by Awk, meant for creating very simple
    graphical user interfaces.
category:           GUI
license:            BSD3
license-file:       LICENSE
author:             Troels Henriksen
maintainer:         athas@sigkill.dk
cabal-version:      >= 1.10
build-type:         Custom

flag use_xft
  description: Use Xft to render text

executable sindre
    main-is:            Main.hs
    build-depends:      X11>=1.5.0.0 && < 1.6, X11-xshape>=0.1.1, X11-rm>=0.2,
                        mtl, base>=4.3, containers, parsec>=3.1, array>=0.3,
                        x11-xim>=0.0.5, setlocale, regex-pcre, process,
                        text, bytestring, unix

    ghc-options:        -funbox-strict-fields -Wall

    ghc-prof-options:   -prof -auto-all -rtsopts
    default-language:   Haskell2010

library
    exposed-modules:    Sindre.X11
                        Sindre.ANSI
                        Sindre.Util
                        Sindre.Parser
                        Sindre.Widgets
                        Sindre.Runtime
                        Sindre.Compiler
                        Sindre.Sindre
                        Sindre.Lib
                        Sindre.Formatting
                        Sindre.Main

    other-modules:      Paths_sindre

    build-depends:      X11>=1.5.0.0 && < 1.6, X11-xshape>=0.1.1, X11-rm,
                        mtl, base>=4.3, containers, parsec>=3.1, array>=0.3,
                        x11-xim>=0.0.5, setlocale, regex-pcre, process,
                        text, bytestring, unix, ansi-terminal
    default-language:   Haskell2010
